[metadata]
name = pykles
version = 0.6
author = Nico Coetzee
author_email = nicc777@gmail.com
description = Python based Kubernetes Resource (CPU and RAM) Limits REST Service
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nicc777/pykles
project_urls =
    Bug Tracker = https://github.com/nicc777/pykles/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    fastapi
    kubernetes

[options.packages.find]
where = src

